--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
 
     <application
@@ -16,12 +16,17 @@
         <activity
             android:name="com.ansen.developerheadlines.activity.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
+
+        </activity>
+        
+        <activity android:name="com.ansen.developerheadlines.activity.LauncherActivity">
+                        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
         </activity>
-    </application>
+     </application>
 
 </manifest>
