--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:19.+'
+    compile 'com.android.support:design:22.2.0'
 }build
